--- a/src/Demo 1.html
+++ b/src/Demo 1.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-    <script src="script.js" defer></script>
     <link rel="stylesheet" href="./output.css">
 </head>
 
@@ -14,8 +13,8 @@
             <input type="text" id="display" class="text-2xl w-full border p-3 rounded-md bg-gray-100" disabled>
         </div>
         <div class="grid grid-cols-4 gap-4">
-            <button class="col-span-2 bg-gray-300 text-black p-4 rounded-md" onclick="clearAll()">AC</button>
-            <button class="bg-gray-300 text-black p-4 rounded-md" onclick="appendToDisplay('%')">%</button>
+            <button class="col-span-2 bg-red-500 text-white p-4 rounded-md" onclick="clearAll()">AC</button>
+            <button class="bg-orange-500 text-black p-4 rounded-md" onclick="appendToDisplay('%')">%</button>
             <button class="bg-orange-500 text-white p-4 rounded-md" onclick="appendToDisplay('/')">/</button>
             <button class="bg-gray-200 text-black p-4 rounded-md" onclick="appendToDisplay('7')">7</button>
             <button class="bg-gray-200 text-black p-4 rounded-md" onclick="appendToDisplay('8')">8</button>
@@ -30,7 +29,7 @@
             <button class="bg-gray-200 text-black p-4 rounded-md" onclick="appendToDisplay('3')">3</button>
             <button class="bg-orange-500 text-white p-4 rounded-md" onclick="appendToDisplay('+')">+</button>
             <button class="col-span-2 bg-gray-200 text-black p-4 rounded-md" onclick="appendToDisplay('0')">0</button>
-            <button class="bg-gray-200 text-black p-4 rounded-md" onclick="appendToDisplay('^')">^</button>
+            <button class="bg-orange-500 text-black p-4 rounded-md" onclick="appendToDisplay('^')">^</button>
             <button class="bg-orange-500 text-white p-4 rounded-md" onclick="calculate()">=</button>
         </div>
     </div>
